// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge — snapshots > forwards extra className 1`] = `
<span
  class="inline-block px-3 py-1 rounded-full text-sm font-medium bg-gray-200 text-gray-800 dark:bg-gray-700 dark:text-gray-100 uppercase"
>
  Custom
</span>
`;

exports[`Badge — snapshots > renders the default variant 1`] = `
<span
  class="inline-block px-3 py-1 rounded-full text-sm font-medium bg-gray-200 text-gray-800 dark:bg-gray-700 dark:text-gray-100 "
>
  Default
</span>
`;

exports[`Badge — snapshots > renders the error variant 1`] = `
<span
  class="inline-block px-3 py-1 rounded-full text-sm font-medium bg-red-200 text-red-800 dark:bg-red-900 dark:text-red-100 "
>
  Failed
</span>
`;

exports[`Badge — snapshots > renders the success variant 1`] = `
<span
  class="inline-block px-3 py-1 rounded-full text-sm font-medium bg-green-200 text-green-800 dark:bg-green-900 dark:text-green-100 "
>
  Completed
</span>
`;

exports[`Badge — snapshots > renders the warning variant 1`] = `
<span
  class="inline-block px-3 py-1 rounded-full text-sm font-medium bg-yellow-200 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 "
>
  Pending
</span>
`;

exports[`Button — snapshots > passes extra className through 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-blue-700 text-white hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 w-full mt-4"
  type="button"
>
  Full width
</button>
`;

exports[`Button — snapshots > renders in disabled state 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-blue-700 text-white hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 "
  disabled=""
  type="button"
>
  Disabled
</button>
`;

exports[`Button — snapshots > renders the danger variant 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-red-600 text-white hover:bg-red-700 dark:bg-red-700 dark:hover:bg-red-800 "
  type="button"
>
  Delete
</button>
`;

exports[`Button — snapshots > renders the default (primary) variant 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-blue-700 text-white hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 "
  type="button"
>
  Save
</button>
`;

exports[`Button — snapshots > renders the outline variant 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 border-2 border-blue-700 text-blue-700 hover:bg-blue-50 dark:border-blue-400 dark:text-blue-400 dark:hover:bg-blue-950 "
  type="button"
>
  Cancel
</button>
`;

exports[`Button — snapshots > renders the secondary variant 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-gray-200 text-gray-900 hover:bg-gray-300 dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600 "
  type="button"
>
  Back
</button>
`;

exports[`Button — snapshots > renders with type="submit" 1`] = `
<button
  class="px-4 py-2 rounded-lg font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed rtl:px-4 bg-blue-700 text-white hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700 "
  type="submit"
>
  Submit form
</button>
`;

exports[`Card — snapshots > merges extra className 1`] = `
<div
  class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 border border-red-400"
>
  Alert card
</div>
`;

exports[`Card — snapshots > renders with nested elements 1`] = `
<div
  class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 "
>
  <h2>
    Title
  </h2>
  <p>
    Body text
  </p>
</div>
`;

exports[`Card — snapshots > renders with text content 1`] = `
<div
  class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 "
>
  Hello world
</div>
`;

exports[`CircularProgress — snapshots > displays the percentage value as text 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="80"
    width="80"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-width="8"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-dasharray="226.1946710584651"
      stroke-dashoffset="131.19290921390976"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 30px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    42
    %
  </span>
</div>
`;

exports[`CircularProgress — snapshots > renders at 0 % 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="80"
    width="80"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-width="8"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-dasharray="226.1946710584651"
      stroke-dashoffset="226.1946710584651"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 30px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    0
    %
  </span>
</div>
`;

exports[`CircularProgress — snapshots > renders at 50 % 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="80"
    width="80"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-width="8"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-dasharray="226.1946710584651"
      stroke-dashoffset="113.09733552923255"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 30px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    50
    %
  </span>
</div>
`;

exports[`CircularProgress — snapshots > renders at 100 % 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="80"
    width="80"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-width="8"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-dasharray="226.1946710584651"
      stroke-dashoffset="0"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 30px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    100
    %
  </span>
</div>
`;

exports[`CircularProgress — snapshots > renders with a label 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="80"
    width="80"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-width="8"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="40"
      cy="40"
      fill="none"
      r="36"
      stroke-dasharray="226.1946710584651"
      stroke-dashoffset="56.54866776461628"
      stroke-linecap="round"
      stroke-width="8"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 30px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    75
    %
  </span>
  <span
    class="text-xs text-gray-500 dark:text-gray-400 text-center"
  >
    Completion
  </span>
</div>
`;

exports[`CircularProgress — snapshots > renders with custom size and strokeWidth 1`] = `
<div
  class="flex flex-col items-center gap-1"
>
  <svg
    class="-rotate-90"
    height="120"
    width="120"
  >
    <circle
      class="stroke-gray-200 dark:stroke-gray-700"
      cx="60"
      cy="60"
      fill="none"
      r="54"
      stroke-width="12"
    />
    <circle
      class="stroke-blue-500 transition-all duration-500"
      cx="60"
      cy="60"
      fill="none"
      r="54"
      stroke-dasharray="339.29200658769764"
      stroke-dashoffset="135.71680263507906"
      stroke-linecap="round"
      stroke-width="12"
    />
  </svg>
  <div
    class="absolute"
    style="margin-top: 50px;"
  />
  <span
    class="text-sm font-semibold text-gray-700 dark:text-gray-300 -mt-1"
  >
    60
    %
  </span>
</div>
`;

exports[`Modal — snapshots > renders nothing when isOpen=false 1`] = `null`;

exports[`ProgressBar — snapshots > clamps above 100 and snapshot reflects clamped value 1`] = `
<div
  class="w-full "
>
  <div
    aria-label="Progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 100%;"
    />
  </div>
</div>
`;

exports[`ProgressBar — snapshots > clamps below 0 and snapshot reflects clamped value 1`] = `
<div
  class="w-full "
>
  <div
    aria-label="Progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`ProgressBar — snapshots > renders at 0 % 1`] = `
<div
  class="w-full "
>
  <div
    aria-label="Progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`ProgressBar — snapshots > renders at 50 % with a label 1`] = `
<div
  class="w-full "
>
  <div
    class="flex justify-between text-sm mb-1 text-gray-700 dark:text-gray-300"
  >
    <span>
      Course progress
    </span>
    <span>
      50
      %
    </span>
  </div>
  <div
    aria-label="Course progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar — snapshots > renders at 100 % 1`] = `
<div
  class="w-full "
>
  <div
    class="flex justify-between text-sm mb-1 text-gray-700 dark:text-gray-300"
  >
    <span>
      Complete
    </span>
    <span>
      100
      %
    </span>
  </div>
  <div
    aria-label="Complete"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 100%;"
    />
  </div>
</div>
`;

exports[`ProgressBar — snapshots > renders without a label (uses default aria-label) 1`] = `
<div
  class="w-full "
>
  <div
    aria-label="Progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="33"
    class="w-full h-2 bg-gray-200 dark:bg-gray-700 rounded-full overflow-hidden"
    role="progressbar"
  >
    <div
      class="h-full bg-blue-600 transition-all duration-300"
      style="width: 33%;"
    />
  </div>
</div>
`;

exports[`Spinner — snapshots > renders the large size 1`] = `
<span
  aria-label="Loading…"
  class="inline-flex items-center justify-center"
  role="status"
>
  <svg
    aria-hidden="true"
    class="animate-spin text-blue-600 dark:text-blue-400 h-12 w-12"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Spinner — snapshots > renders the medium (default) size 1`] = `
<span
  aria-label="Loading…"
  class="inline-flex items-center justify-center"
  role="status"
>
  <svg
    aria-hidden="true"
    class="animate-spin text-blue-600 dark:text-blue-400 h-8 w-8"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Spinner — snapshots > renders the small size 1`] = `
<span
  aria-label="Loading…"
  class="inline-flex items-center justify-center"
  role="status"
>
  <svg
    aria-hidden="true"
    class="animate-spin text-blue-600 dark:text-blue-400 h-4 w-4"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Spinner — snapshots > renders with a custom label 1`] = `
<span
  aria-label="Processing payment…"
  class="inline-flex items-center justify-center"
  role="status"
>
  <svg
    aria-hidden="true"
    class="animate-spin text-blue-600 dark:text-blue-400 h-8 w-8"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"
      fill="currentColor"
    />
  </svg>
</span>
`;
